; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-thread.c_tls_thread.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-thread.c_tls_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tls_key = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @tls_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tls_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i8* @uv_key_get(i32* @tls_key)
  %4 = icmp eq i8* null, %3
  %5 = zext i1 %4 to i32
  %6 = call i32 @ASSERT(i32 %5)
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @uv_key_set(i32* @tls_key, i8* %7)
  %9 = load i8*, i8** %2, align 8
  %10 = call i8* @uv_key_get(i32* @tls_key)
  %11 = icmp eq i8* %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = call i32 @uv_key_set(i32* @tls_key, i8* null)
  %15 = call i8* @uv_key_get(i32* @tls_key)
  %16 = icmp eq i8* null, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @ASSERT(i32 %17)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i8* @uv_key_get(i32*) #1

declare dso_local i32 @uv_key_set(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
